src/services/MediaUpload.scss
.photo-uploader-container {
    max-width: 500px;
    margin: 0 auto;
    // padding: 16px 0;
  }
  .title {
    font-weight: 500;
  }
  
  .dropzone {
    width: full;
    padding: 20px;
    margin: 10px 0 25px 0;
    border: 2px dashed #ccc;
    border-radius: 8px;
    text-align: center;
    cursor: pointer;
    transition: background-color 0.3s, border-color 0.3s;
  
    &.dropzone-active {
      border-color: #007bff;
      background-color: rgb(255, 255, 255, 0.2);
    }
  }
  
  .preview-container {
    margin-top: 16px;
  
    .preview-title {
      font-size: 18px;
      font-weight: 500;
      margin-bottom: 12px;
    }
  
    .preview-grid {
      display: grid;
      grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
      gap: 12px;
  
      .preview-item {
        position: relative;
  
        .preview-image {
          width: 100%;
          height: 100px;
          object-fit: cover;
          border-radius: 4px;
        }
  
        .remove-button {
          position: absolute;
          top: 8px;
          right: 8px;
          background: #e63946;
          color: white;
          border: none;
          padding: 0 8px;
          font-size: 1rem;
          cursor: pointer;
          border-radius: 4px;
        }
      }
    }
  }
  
  .upload-button {
    width: 100%;
    padding: 10px 0;
    background: #007bff;
    color: white;
    border: none;
    border-radius: 4px;
    font-size: 16px;
    cursor: pointer;
    transition: background-color 0.3s;
    margin-top: 15px;
  
    &:hover {
      background-color: #0056b3;
    }
  }

.label-container {  
  width: auto;
  height: 150px;
  display: flex;
  align-items: center;
  flex-direction: column;

  input {
    width: 100%;
    padding: 5px 10px;
    border-radius: 4px;
    border: 1px solid #ccc;

  }
  .price-label {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    gap: 10px;

  }
  span {
    width: 100px;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 5px 0;
    border-radius: 10px 0 10px 0;
    color: white;
    border: black 0.5px solid;
    font-size: 0.75rem;
    font-weight: 500;
  }

}

